--- a/tone-analyzer-api/package.json
+++ b/tone-analyzer-api/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "eslint-config-fullstack": "^6.0.0",
     "eslint-plugin-react": "^7.16.0",
+    "ibm-watson": "^5.1.0",
     "react-redux": "^7.1.1",
+    "serverless-http": "^2.3.0",
     "uuid": "^3.3.3"
   }
 }
