--- a/tone-analyzer-api/serverless.yml
+++ b/tone-analyzer-api/serverless.yml
@@ -30,17 +30,13 @@ provider:
   iamRoleStatements:
   - Effect: Allow
     Action:
-      - dynamodb:DescribeTable
-      - dynamodb:Query
-      - dynamodb:Scan
-      - dynamodb:GetItem
-      - dynamodb:PutItem
-      - dynamodb:UpdateItem
-      - dynamodb:DeleteItem
-    # Restrict our IAM role permissions to
-    # the specific table for the stage
-    Resource:
-      - "Fn::GetAtt": [ EntriesTable, Arn ]
+      - dynamodb:*
+    Resource: '*'
+  - Effect: Allow
+    Action:
+    - lambda:InvokeFunction
+    Resource: '*'
+
 
 functions:
   # Defines an HTTP API endpoint that calls the main function in createEntry.js
@@ -117,6 +113,7 @@ functions:
           method: post
           cors: true
           authorizer: aws_iam
+
 
 # Create our resources with separate CloudFormation templates
 resources:
